cmake_minimum_required(VERSION 3.22)
project(progRgr)

set(CMAKE_CXX_STANDARD 14)

add_executable(progRgr main.cpp gronsfeld.cpp gronsfeld.h interface.cpp interface.h polybiusSquare.cpp polybiusSquare.h simpleTablePermutation.cpp simpleTablePermutation.h atbash.cpp atbash.h keywordABC.cpp keywordABC.h keygen.cpp keygen.h tableCypher.cpp tableCypher.h Caesar.cpp Caesar.h doubleTable.cpp doubleTable.h tarab.cpp tarab.h)
